bootstrap/bitbucket/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bitbucket
  labels:
    app.kubernetes.io/name: bitbucket
