bootstrap/bitbucket/nodeport.yaml
# Ingress 나 DNS 가 아직 없을 때 노드 IP 로 바로 접속하기 위한 NodePort.
# 사용하려면 kustomization.yaml 의 resources 에서 주석을 해제한다.
apiVersion: v1
kind: Service
metadata:
  name: bitbucket-nodeport
  namespace: bitbucket
spec:
  type: NodePort
  selector:
    app: bitbucket
  ports:
    - name: http
      port: 7990
      targetPort: 7990
      nodePort: 30990
    - name: ssh
      port: 7999
      targetPort: 7999
      nodePort: 30999
